--- a/css/style.css
+++ b/css/style.css
@@ -6,35 +6,126 @@
 
     text-decoration: solid;
 }
-.top1 {
-  text-decoration: solid;
+.left-bars{
+  margin:auto;
+  padding:0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.right-bars{
+  margin:auto;
+  padding:0 50px ;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+/* Navbar container */
+.navbar {
+  font-family: Arial;
+}
+.navbar img{
+  width: 120px;
+  height: 80px;
+
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 16px;
   color: black;
-}
-
-.ctu-title{
   text-align: center;
-  margin: 5px 0 85px;
-  font-size: 2rem;
-  font-weight: 700;
-}
- /* Contact Us */
-.contact{
-    padding: 0 20px;
- 
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-.ctu-inner{
-  display: grid;
-  grid-template-columns: repeat(2, minmax(400px, 1fr));
-  column-gap: 120px;
-  grid-template-rows: max-content 1fr;
-  grid-template-areas: "ga1 ga2" "ga3 ga2";
-}
-.ctu-support{
-  grid-area: ga1;
-  padding: 40px 10px;
-  background-color: #C1C4CE;
-  text-align: center;
-  box-sizing: border-box;
+/* Dropdown Button */
+.dropbtn {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border:none;
 }
 
+.dropbtn:hover{
+  border-radius: 2rem;
+  
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  padding: 3px;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  /* border-radius: 2rem; */
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  background-color: #ccc;
+  height: 250px;
+}
+
+/* Style links inside the columns */
+.column a {
+  float: left;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+/* Add a background color on hover */
+.column a:hover {
+  background-color: #ddd;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.byn{
+position: absolute;
+
+
+}
+.carousel-inner{
+  position: relative;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: white;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: black;
+color: white;}
+
+.content img{
+  width: 100%;
+  height: 70vh;
+}
