--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,16 @@
     text-decoration: solid;
 }
 .left-bars{
-  margin:auto;
-  padding:0;
+  margin: auto;
+  float: left;
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .right-bars{
-  margin:auto;
-  padding:0 50px ;
-  display:flex;
-  align-items: center;
-  justify-content: center;
+  margin: auto;
+  float: left;
+  display: flex;
 }
+
 /* Navbar container */
 .navbar {
   font-family: Arial;
@@ -128,4 +125,11 @@ color: white;}
 .content img{
   width: 100%;
   height: 70vh;
+}
+.Offer{
+  display: flex;
+}
+.card{
+  width: 250px;
+  
 }
