--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,11 @@
 
     text-decoration: solid;
 }
-.left-bars{
-  margin: auto;
-  float: left;
-  display: flex;
-}
-.right-bars{
-  margin: auto;
-  float: left;
-  display: flex;
-}
 
 /* Navbar container */
 .navbar {
   font-family: Arial;
+  width: 100%;
 }
 .navbar img{
   width: 120px;
@@ -29,7 +20,6 @@
 
 /* Links inside the navbar */
 .navbar a {
-  float: left;
   font-size: 16px;
   color: black;
   text-align: center;
@@ -52,7 +42,7 @@
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
+  position: absolute;
   display: inline-block;
   padding: 3px;
 }
@@ -103,14 +93,6 @@
   display: table;
   clear: both;
 }
-.byn{
-position: absolute;
-
-
-}
-.carousel-inner{
-  position: relative;
-}
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: white;}
@@ -121,32 +103,6 @@ position: absolute;
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: black;
 color: white;}
-
-.content img{
-  width: 100%;
-  height: 70vh;
-}
-.Offer{
-  display: flex;
-}
-.card{
-  width: 250px;
-  
-}
-
-
-/*
-*
-* ==========================================
-* FOR DEMO PURPOSES
-* ==========================================
-*
-*/
-
-body {
-  min-height: 100vh;
-  background: #fafafa;
-}
 
 
 .social-link {
@@ -171,4 +127,30 @@ body {
 
 .progress {
   height: 10px;
+}
+.card{
+  box-shadow: 0px 2px 5px white;
+  transition: transform .5s;
+  color: white;
+  
+}
+
+
+.card:hover{
+  transform: translateY(-15px);
+}
+.card img{
+  width: 250px;
+  height: 20vh;
+  transition: transform .5s;
+
+}
+.card img:hover {
+  transform: scale(1.2) translateY(-15px);
+}
+
+.mySwiper img{
+  width: 100vw;
+  height: 73vh;
+  position: relative;
 }
