--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 .navbar {
   font-family: Arial;
   width: 100%;
+  background-color: black;
 }
 .navbar img{
   width: 120px;
@@ -26,83 +27,6 @@
   padding: 14px 16px;
   text-decoration: none;
 }
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: white;
-  color: black;
-  padding: 16px;
-  font-size: 16px;
-  border:none;
-}
-
-.dropbtn:hover{
-  border-radius: 2rem;
-  
-}
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: absolute;
-  display: inline-block;
-  padding: 3px;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  /* border-radius: 2rem; */
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  background-color: #ccc;
-  height: 250px;
-}
-
-/* Style links inside the columns */
-.column a {
-  float: left;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-/* Add a background color on hover */
-.column a:hover {
-  background-color: #ddd;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: white;}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: black;
-color: white;}
 
 
 .social-link {
@@ -153,4 +77,13 @@ color: white;}
   width: 100vw;
   height: 73vh;
   position: relative;
+}
+
+.swiper-container {
+  position: relative;
+  z-index: 0;
+}
+td img{
+  width: 200px;
+  height: 250px;
 }
